# number6.ai

./: CLAUDE.md  README.md  astro.config.mjs  humanizer-report.md  package-lock.json  package.json  pnpm-lock.yaml
.upsun/: config.yaml
assessment/: .env.example  .environment  docker-compose.yml  pyproject.toml
assessment/docs/: prompt-hardening-implementation.md
assessment/docs/snippets/: architecture-overview.txt  layer1-regex-filter.py  layer2-random-enclosure.py  layer3-few-shot-inoculation.py  layer4-sandwich-defense.py  layer5-output-leak-detection.py  test-guardrails-unit.py  test-injection-attacks.py  wiring-layer1-api.py  wiring-layer5-response.py
assessment/src/assessment_agent/: agent.py  config.py  db.py  guardrails.py  main.py  models.py  prompts.py  scoring.py
assessment/tests/: conftest.py  test_assessment_flow.py  test_guardrails.py  test_prompt_injection.py
design/: logo.psd  number6.pen
docs/: 01-brand-identity-messaging.md  02-homepage-copy.md  03-designer-brief.md  04-service-catalog.md  05-about-page.md  06-contact-page.md  07-blog-page.md  08-blog-article-page.md  09-cms-page.md  10-terms-and-conditions.md  11-privacy-policy.md  12-cookie-policy.md  prompt_hardening.md  research.md
public/: llms.txt
src/: content.config.ts
src/components/: Footer.astro  Header.astro  RoiCalculator.tsx  SchemaOrg.astro
src/data/: authors.ts  business.ts
src/layouts/: BaseLayout.astro  BlogArticleLayout.astro  LegalLayout.astro
src/pages/: 404.astro  about.astro  assessment.astro  contact.astro  (+8 more)
website/: astro.config.mjs  pnpm-lock.yaml
(+242 files in other folders)
